# coding-notes

./: 220218_ResNet_CIFAR_vanilla_pytorch (1).ipynb  Makefile  pyproject.toml
coding_notes/csc2558_adaptive_learning/week_2_beta_bernoulli_thomson_sampling/: 1_Bayesian_Statistics.ipynb
coding_notes/csc2558_adaptive_learning/week_2_beta_bernoulli_thomson_sampling/.ipynb_checkpoints/: 1_Bayesian_Statistics-checkpoint.ipynb
