[tool.poetry]
name = "coding_notes"
version = "0.1.0"
description = ""
authors = ["Teerapat12 <teerapat.time12@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "^1.3.3"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
